--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>I am static website</title>
   </head>
-  <body>
+  <body bgcolor = aqua>
     <h1>I am static website</h1>
     <h4>1st Version</h4>
     <h5> 2nd instance </h5>
